# protocol-guide

./: .dockerignore  .env.docker  .env.example  .eslintrc.cjs  .gitignore  .gitkeep  .railway  ACCESSIBILITY-IMPROVEMENTS.md  ACCESSIBILITY-SUMMARY.md  ACCESSIBILITY_AUDIT.md  ACCESSIBILITY_QUICK_REFERENCE.md  ACCESSIBILITY_REFACTOR_SUMMARY.md  AGENTS.md  AI-CHEATSHEET.md  ANALYTICS_MIGRATION_COMPLETE.md  ANALYTICS_MIGRATION_SUMMARY.md  App.tsx  BLOB_FIXES_SUMMARY.md  BUTTON_LAYOUT_VISUAL.md  BUTTON_REFACTOR_SUMMARY.md  CHANGELOG.md  CHAT-TEST-README.md  CHUNKING-CHECKLIST.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CLEANUP-REQUIRED.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  COOKIE_FIXES_SUMMARY.md  CRITICAL_ASSESSMENT.md  DATA_BLOCKER_FIX_REPORT.md  DEPARTMENT_PRICING_QUICKSTART.md  DISCLAIMER_CONSENT_IMPLEMENTATION.md  Dockerfile.server  Dockerfile.web  E2E-CHAT-DELIVERY-SUMMARY.md  E2E-CHAT-TEST-REPORT.md  E2E_FIXES_COMPLETE.md  E2E_TEST_REPORT.md  (+130 more)
.claude/: ralph-loop.local.md  settings.local.json
.husky/: pre-commit  pre-push
.netlify/: state.json
agents/: AGENTS.md
app/: _layout.tsx  chatbot-widget.css  contact.tsx  disclaimer.tsx  feedback.tsx  globals.css  index.tsx  layout.tsx  login.tsx  page.tsx  privacy.tsx  terms.tsx
rust-server/: Cargo.toml  start.sh
rust-server/src/: db.rs  main.rs
rust-server/src/middleware/: auth.rs
rust-server/src/models/: county.rs  feedback.rs  mod.rs  protocol.rs  query.rs  user.rs
rust-server/src/routes/: counties.rs  health.rs  mod.rs  search.rs  users.rs
rust-server/src/services/: llm.rs  mod.rs
(+1659 files in other folders)
